--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "os": "node ejercicios/1-os.mjs",
     "path": "node ejercicios/1-os.mjs",
-    "dotev":"node ejercicios/2-process.js"
+    "dotev": "node ejercicios/2-process.js"
   },
   "keywords": [],
   "author": "AndroXcta",
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "nodemon": "^3.0.1"
   }
 }
